[build-system]
requires = ['hatchling', 'hatch-vcs', 'hatch-fancy-pypi-readme']
build-backend = 'hatchling.build'

[project]
name = 'dry-foundation'
authors = [
  { name = 'Mitch Negus', email = 'mitchnegus57@gmail.com' },
]
description = 'Tools and components for building customized and consistent small-scale Flask applications.'
license = { text = 'GNU GPLv3' }
requires-python = '>=3.10,<3.13'
dependencies = [
  'Flask>=2.2.2',
  'gunicorn>=23.0.0',
  'SQLAlchemy>=2.0.0,<2.0.38',
  'sqlalchemy-views>=0.3.2',
]
keywords = [
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Framework :: Flask',
  'Framework :: Pytest',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Natural Language :: English',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
]
dynamic = ['readme', 'version']

[project.urls]
Download = 'https://pypi.org/project/...'
Homepage = 'https://github.com/mitchnegus/...'
Repository = 'https://github.com/mitchnegus/...'
Changelog = 'https://github.com/mitchnegus/.../blob/main/CHANGELOG.md'

# Set DRY Foundation as a pytest plugin to use the `AppTestManager` functionality
[project.entry-points.pytest11]
dry_foundation = "dry_foundation.testing.manager"

[project.optional-dependencies]
dev = [
  'nox~=2025.5.1',
  'dry_foundation[docs,test]',
]
docs = [
  'furo',
  'sphinx',
  'myst-parser',
]
test = [
  'coverage==7.9.2',
  'pytest==8.4.1',
]

[tool.hatch.version]
source = 'vcs'

[tool.hatch.build.targets.wheel]
packages = [
  'src/dry_foundation',
]

[tool.hatch.build.hooks.vcs]
version-file = 'src/dry_foundation/_version.py'

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = 'README.md'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'src="((?!https?:\/\/)\S+?)"'
replacement = 'src="https://raw.githubusercontent.com/mitchnegus/dry_foundations/main/\1"'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/mitchnegus/dry_foundations/blob/main/\g<2>)'

[tool.pytest.ini_options]
addopts = [
  '--import-mode=importlib',
]
pythonpath = ["tests/helpers"]
norecursedirs = ["tests/helpers"]

[tool.coverage.run]
omit = [
   '_version.py',
]

[tool.coverage.report]
exclude_also = [
  'raise NotImplementedError',
  'pass',
]

[tool.black]
force-exclude = 'src/dry_foundation/_version.py'

[tool.isort]
profile = 'black'
src_paths = ['src/dry_foundation', 'tests']
skip = ['src/dry_foundation/_version.py']
known_local_folder = ["testing_helpers"]
